<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    tools:context=".activity.CreateOwnTripActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_primary"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_arrow_IV"
            android:layout_width="50dp"
            android:padding="10dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/back_icon"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/crate_trip"
            android:textFontWeight="700"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


   <LinearLayout
       android:padding="10dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintTop_toBottomOf="@id/toolbar">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/toolbar"
           android:fontFamily="@font/nunito_sans"
           android:textSize="15sp"
           android:textColor="@color/black"
           android:layout_marginTop="5dp"
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
           android:textFontWeight="700"
           android:text="@string/route_name"/>

       <TextView
           android:id="@+id/route_name_TV"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/toolbar"
           android:fontFamily="@font/nunito_sans"
           android:textSize="14sp"
           android:textColor="@color/black"
           android:layout_marginTop="5dp"
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
           android:textFontWeight="700"
           android:text="@string/dehradun_to_delhi_isbt_via_haridwar"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/toolbar"
           android:fontFamily="@font/nunito_sans"
           android:textSize="15sp"
           android:textColor="@color/black"
           android:layout_marginTop="5dp"
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
           android:textFontWeight="700"
           android:text="@string/from_station"/>

       <TextView
           android:id="@+id/select_from_station_TV"
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:layout_marginTop="5dp"
           android:background="@drawable/way_bill_et_bg"
           android:focusable="true"
           android:textColor="@color/black"
           android:textFontWeight="700"
           android:drawableRight="@drawable/down_arrow2"
           android:fontFamily="@font/nunito_sans"
           android:gravity="center_vertical"
           android:hint="@string/from_station"
           android:maxLength="20"
           android:paddingStart="12dp"
           android:paddingEnd="8dp"
           android:textSize="16sp" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/toolbar"
           android:fontFamily="@font/nunito_sans"
           android:textSize="15sp"
           android:textColor="@color/black"
           android:layout_marginTop="5dp"
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
           android:textFontWeight="700"
           android:text="@string/to_station"/>

       <TextView
           android:id="@+id/select_to_station_TV"
           android:paddingStart="12dp"
           android:paddingEnd="8dp"
           android:layout_marginTop="5dp"
           android:textSize="16sp"
           android:textColor="@color/black"
           android:fontFamily="@font/nunito_sans"
           android:layout_width="match_parent"
           android:hint="@string/to_station"
           android:textFontWeight="700"
           android:drawableRight="@drawable/down_arrow2"
           android:layout_height="45dp"
           android:gravity="center_vertical"
           android:background="@drawable/way_bill_et_bg"
           android:focusable="true"
           android:maxLength="20"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/toolbar"
           android:fontFamily="@font/nunito_sans"
           android:textSize="15sp"
           android:textColor="@color/black"
           android:layout_marginTop="5dp"
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
           android:textFontWeight="700"
           android:text="Select Direction"/>


       <RadioGroup
           android:layout_marginTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <RadioButton
               android:id="@+id/forward_RB"
               android:fontFamily="@font/nunito_sans"
               android:layout_width="match_parent"
               android:textColor="@color/black"
               android:textFontWeight="600"
               android:layout_height="30dp"
               android:text="@string/forward"/>

           <RadioButton
               android:id="@+id/inward_RB"
               android:fontFamily="@font/nunito_sans"
               android:layout_width="match_parent"
               android:layout_height="30dp"
               android:textColor="@color/black"
               android:textFontWeight="600"
               android:layout_marginTop="5dp"
               android:text="@string/inward"/>


       </RadioGroup>


       <Button
           android:id="@+id/create_trip_BT"
           android:layout_width="match_parent"
           android:layout_marginTop="10dp"
           android:text="@string/create_trip"
           android:layout_height="wrap_content"/>




   </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>