<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textFontWeight="800"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/general_and_child_ticket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textFontWeight="800"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/dehradun_isbt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textFontWeight="800"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textFontWeight="800"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/delhi_kashmiri_gate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="90dp"
            android:background="@drawable/button_border"
            android:layout_height="50dp">

            <TextView
                android:textColor="@color/black"
                android:textFontWeight="800"
                android:fontFamily="@font/nunito_sans"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="GEN"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="70dp"
            android:background="@drawable/select_station_bg"
            android:layout_height="50dp">

           <ImageView
               android:padding="10dp"
               android:src="@drawable/add"
               android:layout_width="match_parent"
               android:layout_height="match_parent"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="70dp"
            android:background="@drawable/select_station_bg"
            android:layout_height="50dp">

            <ImageView
                android:padding="10dp"
                android:src="@drawable/add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>


    </LinearLayout>




    <LinearLayout
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <TextView
            android:layout_weight="1"
            android:gravity="end"
            android:textFontWeight="800"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/total_fare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_weight="1"
            android:gravity="start"
            android:textFontWeight="800"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_sans"
            android:text="$ 2000"
            android:layout_marginStart="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <TextView
            android:layout_weight="1"
            android:gravity="end"
            android:textFontWeight="800"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/km"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_weight="1"
            android:gravity="start"
            android:textFontWeight="800"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_sans"
            android:text="2000"
            android:layout_marginStart="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</LinearLayout>