<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textFontWeight="500"
                android:text="@string/are_you_sure"/>


            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textFontWeight="600"
                android:text="@string/do_you_want_to_start_your_trip"/>


            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:id="@+id/start_trip_no_RL"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/no"
                    app:strokeColor="@color/color_primary"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_border"
                    android:layout_width="match_parent"
                    android:textColor="@color/color_primary"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/no"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/color_primary"/>


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/start_trip_yes_RL"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/no"
                    app:strokeColor="@color/color_primary"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_border"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/color_primary"
                    android:textColor="@color/color_primary"
                    android:layout_height="50dp">



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/yes"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"/>

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>