<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="5dp"
        android:id="@+id/cardTopDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:paddingTop="5dp">
        <LinearLayout
            android:id="@+id/llSearchDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSTRPID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="1dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tvFromStationId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="1dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tvToStationId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="1dp"
                android:visibility="gone"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|bottom">
                <TextView
                    android:fontFamily="@font/nunito_sans"
                    android:id="@+id/tvDirection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:gravity="left|center_vertical"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/na"
                    android:textSize="13dp" />
                <TextView
                    android:fontFamily="@font/nunito_sans"
                    android:id="@+id/tvStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/_00_00_am"
                    android:gravity="right|center_vertical"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="13dp" />
                <TextView
                    android:fontFamily="@font/nunito_sans"
                    android:id="@+id/tvStatus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pending"
                    android:gravity="right|center_vertical"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="13dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/nunito_sans"
                    android:id="@+id/tvStations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/na"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2.5"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:gravity="left|bottom">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/online_booking"
                            android:fontFamily="@font/nunito_sans"
                            android:textColor="@color/gray"
                            android:textSize="11dp" />
                        <TextView
                            android:id="@+id/tvOnlineYN"
                            android:layout_width="wrap_content"
                            android:gravity="right|center_vertical"
                            android:layout_height="wrap_content"
                            android:text="@string/na"
                            android:fontFamily="@font/nunito_sans"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            tools:ignore="RtlHardcoded" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/start_trip_BT"
                    android:fontFamily="@font/nunito_sans"
                    android:textFontWeight="700"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:text="@string/start_trip"/>

            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>